autorensystem/js/simulator/view/popover.css
div.popover div.popover-content {
    font-size: medium;
}
div.popover h3.popover-title div a.popover-close,
div.popover h3.popover-title a.simulator-info-close {
    float: right;
}




div.simulator-info-text a {
    text-decoration: underline;
}
#timeline-info-hint {
    font-size: small;
}





.popover-column-options span.btn
{
    display: block;
}
.popover-column-options span.btn:hover
{
    background-color: #cccccc;
}
.popover-column-options span.btn.fui-trash:hover
{
    background-color: red;
}




.popover-simulation-name-description * {
    display: block;
    width: 235px;
}




div.popover-context-info {
    text-align: center;
}

div.popover-context-info > * {
    text-align: left;
}

div.popover-context-info input.popover-value,
div.popover-context-info .select,
div.popover-context-info div.popover-parameters {
    display: block;
    width: 235px;
    margin-bottom: 10px;
}

div.popover-parameters div.popover-parameter {
    display: block;
    width: 235px;
    margin-bottom: 10px;
}
div.popover-parameters div.popover-parameter.parameter-input {
    display: table-cell;
}

div.popover-context-info div.popover-bottom-buttons {
    border-top: 1px solid lightgrey;
    margin-top: 20px;
    padding-top: 10px;
    display: flex;
}

div.popover-context-info div.btn {
    margin: 5px;
}






div#popoverContentTemplate {
    display: none;
}

